kubernetes/serviceIngress/hostname-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
      name: my-webserver
    spec:
      containers:
        - name: my-webserver
          image: docker.io/alicek106/rr-test:echo-hostname
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
