kubernetes/serviceIngress/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-external
spec:
  type: ExternalName
  externalName: ec2-43-201-22-230.ap-northeast-2.compute.amazonaws.com
